--- a/media.css
+++ b/media.css
@@ -9,3 +9,101 @@
 
     
 }
+
+
+@media only screen and (min-width :  768px) and (max-width : 991px) {
+    .container {
+        width: 100%;
+        max-width: 991px;
+        background-color: #ffffff;
+        margin: 0 auto;
+    }
+
+
+    .content {
+        width: 100%;
+        max-width: 767px;
+        margin: 0 auto;
+    }
+
+    h1 {
+        margin: 0;
+        color: #1d1813;
+        font-family: "Exo 2";
+        font-size: 28px;
+        font-weight: 500;
+    }
+    
+
+    .nav_link{
+        padding: 5px 15px 1px;
+        background-color: #f5f3e8;
+        text-decoration-style: dotted;
+        color: #77716a;
+        font-family: "Helvetica Neue";
+        font-size: 16px;
+        font-weight: 300;
+        margin: 20px 5px 17px 5px;
+    }
+
+    .main {
+        margin: 0 auto;
+    }
+
+    .card_img{
+        width: 210px;
+        height: 139px;
+    }
+
+    .card {
+        margin: 0px 5px 45px 30px;
+        max-width: 210px;
+    }
+
+
+    .card_title {
+        color: #3c2f20;
+        font-family: "Helvetica Neue";
+        font-weight: 300;
+        line-height: 32px;
+        font-size: 14px;
+    }
+    
+    .card_link {
+        color: #3c2f20;
+        text-decoration-style: dotted;
+        font-family: "Exo 2";
+     
+    }
+
+    .cheese_type {
+    
+        font-size: 20px;
+        font-weight: 500;
+        line-height: 25px;
+        
+    }
+    
+    .flour {
+        font-family: "Exo 2";
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 15px;
+    }
+    
+    .brand {
+        margin: 10px 0px 5px 0px;
+    }
+    
+    .description {
+        max-width: 200px;
+        height: 40px;
+        color: #1d1813;
+        font-family: "Helvetica Neue";
+        font-size: 13px;
+        font-weight: 300;
+        line-height: 14px;
+        
+    }
+    
+}
