--- a/style.css
+++ b/style.css
@@ -51,6 +51,11 @@ h1 {
     justify-content: center;
 }
 
+.nav_img {
+    width: 90px;
+    height: 27px;
+}
+
 .nav_link{
     padding: 8px 20px;
     background-color: #f5f3e8;
